@@ -10,6 +10,11 @@
   <!ENTITY mike-addr "mike@theoretic.com">
 ]>
 
+<?gnome-doc-status
+Version: 2.12
+Status: Incomplete
+?>
+
 <article id="index" lang="en" xmlns:xi="http://www.w3.org/2001/XInclude">
   <articleinfo>
     <title>&application; Manual</title>
