@@ -1,3 +1,8 @@
+2005-07-28  Shaun McCance  <shaunm@gnome.org>
+
+	* help/sound-juicer/C/sound-juicer.xml:
+	- Added gnome-doc-status processing instruction
+
 2005-07-28  Ross Burton  <ross@burtonini.com>
 
 	* help/sound-juicer/Makefile.am:
